# HikCam1

./: CMakeLists.txt  HikCam.cpp  HikCam.h  README.md  main.cpp
Includes/: CameraParams.h  MvCameraControl.h  MvErrorDefine.h  MvISPErrorDefine.h  ObsoleteCamParams.h
